# UkraingProject

./: CMakeLists.txt
TestingFloderWithFiles/: first.task
code/: Question.cpp  Question.h  Testing_system.cpp  Testing_system.h  main.cpp
